<resources>
    <string name="app_name">Careers\' Spot</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">New user? Swipe left to register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="tag">Build your career</string>
    <string name="swipe_right_for_login">Already joined? Swipe right to log in</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="details">Details</string>
    <string name="personal_info">Personal Info</string>
    <string name="surname">Surname</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">Date of birth</string>
    <string name="birth_place">Place of birth</string>
    <string name="country">Country</string>
    <string name="country_code">Country Code</string>
    <string name="contact">Phone number</string>
    <string name="residence">Area of residence</string>
    <string name="education_al">Educational Details</string>
    <string name="course">Course</string>
    <string name="institute">Institute</string>

</resources>
